# aichatv1

./: .replit  db.sqlite3  pyproject.toml  readme.md  replit.md
agent/: admin.py  analytics.py  enhanced_views.py  file_processors.py  forms.py  models.py  multimodal_utils.py  urls.py  utils.py  views.py  voice_utils.py
agent/migrations/: 0001_initial.py  0002_aimodelconfig_apikeyconfig_systemprompt.py  0003_knowledgebaseentry_searchquery.py  0004_requestlog_kb_entries_used_new.py  0005_contentfilter_moderationlog.py  0006_fileupload.py  0007_analytics_eventschedule_notification_userprofile_and_more.py  0008_chatsession_title_alter_chatmessage_message_type_and_more.py
agent/static/css/: enhanced-chat.css  style.css
agent/static/js/: chat.js  enhanced-chat.js  themes.js
agent/templates/: chat.html  enhanced-chat.html
agent/templates/admin/: base_site.html
ai_agent_project/: asgi.py  settings.py  urls.py  wsgi.py
media/uploads/: .gitkeep  ВУЗ+проект+2025.xlsx
media/voice/2025/07/20/: voice-message.webm  voice-message_EyFvylm.webm  voice-message_FEjtdPn.webm  voice-message_pTVU59Y.webm
