[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "requests>=2.32.4",
]
